k8s/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: meta-web-three
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  rules:
  - host: api.meta-web-three.local
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 10082
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 10083
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 10084
      - path: /message
        pathType: Prefix
        backend:
          service:
            name: message-service
            port:
              number: 10085
